Modified `Program.cs` to use configuration for connection string. Updated `appsettings.json` with new `DefaultConnection`.

--- a/EFCore.DataClassification.WebApi/appsettings.json
+++ b/EFCore.DataClassification.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=EF_core_Try_clean;Trusted_Connection=True;MultipleActiveResultSets=True;App=Example;Encrypt=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
