i tried to do without differ but it wont work. this was a poc
- Updated `EFCore.DataClassification.WebApi.csproj` to replace NuGet package reference with a project reference.
- Removed and refactored migration files, adding new properties like `CreatedAt` and updating data classification annotations.
- Modified `AppDbContextModelSnapshot.cs` to reflect model changes.
- Adjusted data classification attributes in `Bike.cs` and `Document.cs` for improved sensitivity categorization.
- Enhanced `DataClassificationConstants.cs` for consistent annotation naming.
- Updated service registration in `DataClassificationDbContextOptionsExtension.cs` to include data classification operations.
- Introduced `MigrationsModelDifferDecorator.cs` to manage data classification operations during migrations.
- Added `DataClassificationModelLookup.cs` for retrieving data classification metadata.
- Updated `SensitivityRank.cs` to include a new record type for data classification metadata.
- Created new migration files to establish the initial database schema with updated entity definitions and data classification annotations.

--- a/EFCore.DataClassification.WebApi/EFCore.DataClassification.WebApi.csproj
+++ b/EFCore.DataClassification.WebApi/EFCore.DataClassification.WebApi.csproj
@@ -8,12 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="16.0.0" />
-    <PackageReference Include="EFCore.DataClassification" Version="1.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.22">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.22" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EFCore.DataClassification\EFCore.DataClassification.csproj" />
   </ItemGroup>
 
 </Project>
